--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.firebase/hosting.cHVibGlj.cache
+.firebase/hosting.YnVpbGQ.cache
+public/404.html
+.firebaserc
+firestore.indexes.json
+firebase.json
+firestore.rules
