--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.4",
+    "firebase-tools": "^11.20.0",
     "fs": "^0.0.1-security",
     "os": "^0.1.2",
     "react": "^18.2.0",
