--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs": "^0.0.1-security",
     "os": "^0.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.1",
